# OpenSslMcve

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  generate_asm.py  init.ps1  source.cpp  vcpkg-configuration.json  vcpkg.json
ports/fixed/openssl/: portfile.cmake
ports/openssl/windows/: avx512.patch
src/: Cipher.cpp  Cipher.hpp  IVs.hpp  Keys.hpp  Poly1305.cpp  Poly1305.hpp  Validator.cpp  Validator.hpp  XmmRegisters.cpp  XmmRegisters.hpp  main.cpp  test.c
src/Common/: Cipher.cpp  Cipher.hpp  IVs.hpp  Keys.hpp  Validator.cpp  Validator.hpp
src/Examples/: WaitFor.cpp
src/Mcve/: Mcve.cpp
src/Tests/: Tests.cpp
